fixed overflow

--- a/styles/Roadmap.module.css
+++ b/styles/Roadmap.module.css
@@ -29,7 +29,7 @@
   width: 100%;
   z-index: -2;
   position: absolute;
-  top: -329px;
+  top: calc(-100px - 12%);
 }
 
 .background {
@@ -37,11 +37,10 @@
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
-  background-size: contain;
   position: absolute;
-  background: url("../public/roadmap/background.png") no-repeat center center
-    fixed;
+  background: url("../public/roadmap/background.png") no-repeat center center;
 
+  /* background-position: top -200px left 0px; */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -50,7 +49,7 @@
   z-index: -2;
 }
 .roadmapFrame {
-  top: 250px;
+  top: 350px;
   left: 0;
   width: 100%;
   position: absolute;
@@ -78,8 +77,9 @@
   color: #b09182;
   width: 100%;
   font-size: 43px;
-  padding-top: 250px;
+  padding-top: 350px;
   justify-content: center;
+  padding-bottom: 200px;
 }
 .stepElement span {
   color: #7d4f3a;
